--- a/ITP/appendix/appendix.tex
+++ b/ITP/appendix/appendix.tex
@@ -1,17 +1,23 @@
-\section{Introduction} \label{sec introduction}
+\appendix \label{sec appendix}
 
+\section{Appendix} 
 
-\subsection{Purpose}
+\subsection{Hours of work}
+This is the time spent redacting the ITPD
+\begin{itemize}
+	\item {Lorenzo Binosi} -  25 hours
+\end{itemize}
 
-
-\subsection{Scope}
-
-  
-\subsection{Definitions, Acronyms, Abbreviations}
-
-
-\subsection{Reference Documents}
-
-
-\subsection{Document Structure}
-
+\begin{thebibliography}{1}	
+	\bibitem{se-project-rules}
+	Software Engineering 2 Project, AA 2016/2017 - \emph{Goal and approach, schedule and rules}
+	
+	\bibitem{se-itpd}
+	Software Engineering 2 Project, AA 2016/2017 - \emph{Assignments 3}
+	
+	\bibitem{power-rasd}
+	Lorenzo Binosi, \emph{Software Engineering 2: PowerEnJoy - Requirements Analysis and Specification Document}
+	
+	\bibitem{power-dd}
+	Lorenzo Binosi, \emph{Software Engineering 2: PowerEnJoy - Design Document}.
+\end{thebibliography}
