--- a/ITP/introduction/introduction.tex
+++ b/ITP/introduction/introduction.tex
@@ -1,17 +1,44 @@
 \section{Introduction} \label{sec introduction}
 
+\subsection{Revision History}
+
+Version of this document: 1.0 \\
+Last update: 15/01/2017
 
 \subsection{Purpose}
 
+This document is the Integration Test Plan Document (ITPD) for the PowerEnJoy software. It describes the testing approach and overall framework that will drive the testing of the software.
+
+The document is written for project managers, developers, testers and quality assurance.
 
 \subsection{Scope}
 
+PowerEnJoy is a digital management system for a car-sharing service. Its software need to be tested, in a clearly defined and well thought way, in order to avoid any failure or undesired behavior of the system.
   
 \subsection{Definitions, Acronyms, Abbreviations}
 
+\begin{description}
+	\item[ITPD:] Integration Test Plan Document.
+	\item[DD:] Design Document.
+	\item[RASD:] Requirements Analysis and Specification Document.
+	\item[System:] the whole software system to be developed, comprehensive of all its parts.
+	\item[REST:] REpresentational State Transfer. It's an architectural style and an approach to stateless communications, used in the development of client-server systems.
+	\item[GUI:] Graphical User Interface.
+	\item[API:] Application Programming Interface.
+	\item[EJB:] Enterprise Java Bean.
+	\item[JPA:] Java Persistence API.
+	\item[JSP:] JavaServer Pages.
+	\item[HTTP:] HyperText Transfer Protocol.
+	\item[HTTPS:] HyperText Transfer Protocol Secure.
+\end{description}
 
 \subsection{Reference Documents}
 
-
-\subsection{Document Structure}
+This document refers to the following documents:
+\begin{itemize}
+	\item Software Engineering 2 project~\cite{se-project-rules}.
+	\item ITPD assignement~\cite{se-itpd}.
+	\item RASD of the PowerEnJoy project~\cite{power-rasd}.
+	\item DD of the PowerEnJoy project~\cite{power-dd}.
+\end{itemize}
 
