--- a/ITP/tools/tools.tex
+++ b/ITP/tools/tools.tex
@@ -1,17 +1,11 @@
-\section{Introduction} \label{sec introduction}
+\section{Tools and Test Equipment Required} \label{sec tools}
 
+The software tools used to automate the integration testing are the following:
+\begin{itemize}
+	\item \textbf{JUnit} \\ JUnit is a simple framework to write repeatable tests. It is an instance of the xUnit architecture for unit testing frameworks. \\ \url{http://junit.org/junit4/} 
+	\item \textbf{Mockito} \\ Mockito is a mocking framework that lets you write tests with a clean \& simple API. Mockito doesn’t give you hangover because the tests are very readable and they produce clean verification errors.  \\ \url{http://site.mockito.org/} 
+	\item \textbf{Arquillian} \\ Arquillian is a test framework that can be used to perform testing inside a remote or embedded container, or deploy an archive to a container so the test can interact as a remote client. \\ \url{http://arquillian.org/} 
+	\item \textbf{Apache JMeter} \\ The Apache JMeter is an open source Java application designed to load test functional behavior and measure performance. It was originally designed for testing Web Applications but has since expanded to other test functions. \\ \url{http://jmeter.apache.org/} 
+\end{itemize}
 
-\subsection{Purpose}
-
-
-\subsection{Scope}
-
-  
-\subsection{Definitions, Acronyms, Abbreviations}
-
-
-\subsection{Reference Documents}
-
-
-\subsection{Document Structure}
 
