fixed a copy-past error

--- a/RASD/appendix.tex
+++ b/RASD/appendix.tex
@@ -2,8 +2,7 @@
 \subsection{Used tools}
 To create the RASD we used the following tools:
 \begin{itemize}
-	\item \textbf{MikTex} \\ JUnit is a simple framework to write repeatable tests. It is an instance of the xUnit architecture for unit testing frameworks.
- \\ \url{http://junit.org/junit4/} 
+	\item \textbf{MikTex} \\ Distribution of the typesetting system LaTeX \\ \url{http://miktex.org/} 
 	\item \textbf{TexStudio}\\ OpenSource cross-platform LaTeX editor we used to write the RASD. \\ \url{http://texstudio.sourceforge.net/} 
 	\item \textbf{StarUML}\\ UML modelling tool we used to build the graphs\\ \url{http://staruml.io/} 
 	\item \textbf{Balsamiq}\\ The mockup builder we used to design the mockups. \\ \url{https://balsamiq.com/} 
